[package]
name = "saddle-camera-third-person-camera"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-camera-third-person-camera"
license = "MIT-0"
description = "Reusable follow and orbit camera rig with smoothing, framing, and obstacle avoidance"

[features]
default = ["enhanced-input"]
enhanced-input = ["dep:bevy_enhanced_input"]

[dependencies]
bevy = "0.18"
bevy_enhanced_input = { version = "0.24", optional = true }

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
