[workspace]
members = [
    "common",
    "basic_follow",
    "shoulder_aim",
    "collision_corridor",
    "physics_target",
    "gamepad",
    "runtime_retarget",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
bevy_enhanced_input = "0.24"
saddle-camera-third-person-camera = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
