[workspace]
members = [
    "common",
    "basic_follow",
    "shoulder_aim",
    "lock_on",
    "character_controller",
    "collision_corridor",
    "physics_target",
    "gamepad",
    "runtime_retarget",
    "custom_effects",
    "lab",
]
resolver = "3"

[workspace.dependencies]
avian3d = "0.6"
bevy = "0.18"
bevy_flair = "0.7"
bevy_enhanced_input = "0.24"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-camera-third-person-camera = { path = ".." }
saddle-character-controller = { git = "https://github.com/julien-blanchon/saddle-character-controller" }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
