[package]
name = "saddle-camera-third-person-camera-example-runtime-retarget"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-camera-third-person-camera = { workspace = true }
saddle-camera-third-person-camera-example-common = { path = "../common" }

[lints]
workspace = true
